# tiny-blocks

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_USERS.md  config.json  docker-compose.yaml  pyproject.toml  setup.py
.github/workflows/: main.yml
blocks/etl/: __init__.py  base.py  dependencies.py
blocks/etl/extract/: base.py  from_sql_query.py  read_csv.py  read_json.py  read_sql.py  read_sql_query.py  read_sql_table.py
blocks/etl/load/: base.py  to_csv.py  to_json.py  to_sql.py
blocks/etl/transform/: align.py  append.py  applymap.py  astype.py  base.py  drop_duplicates.py  dropna.py  fillna.py  merge.py  rename.py  sort.py
blocks/sinks/: __init__.py  csv.py  json.py  sql.py
blocks/sources/: __init__.py  base.py  csv.py  json.py  sql.py
docs/: conf.py  examples.rst  extract.rst  help.rst  index.rst  installation.rst  license.rst  load.rst  make.bat  tiny-blocks.rst  transform.rst
notebooks/: Examples.ipynb  Untitled.ipynb
oracle/instantclient_21_7/: BASIC_LICENSE  BASIC_README  adrci  genezi  libocci.so.21.1  libocci_gcc53.so.21.1  uidrvci
tests/: conftest.py
tests/e2e/: basic_flow.py  test_basic_flow.py
tests/unit/: test_pipeline.py
tests/unit/etl/extract/: from_csv.py  from_sql_query.py  from_sql_table.py  read_csv.py  read_sql_query.py  read_sql_table.py  test_from_csv.py  test_from_sql_query.py  test_from_sql_table.py
tests/unit/etl/load/: test_to_csv.py  test_to_sql.py  to_sql.py
tests/unit/etl/transform/: drop_duplicates.py  test_astype.py  test_drop_duplicates.py  test_drop_na.py  test_fill_na.py  test_rename.py
tests/unit/extract/: test_from_csv.py  test_from_kafka.py  test_from_sql.py  test_from_sql_query.py  test_from_sql_table.py
tests/unit/load/: test_to_csv.py  test_to_sql.py
tests/unit/transform/: test_apply.py  test_astype.py  test_drop_duplicates.py  test_drop_na.py  test_enrich_api.py  test_fill_na.py  test_merge.py  test_rename.py  test_sort.py  test_validate.py
tiny_blocks/: __init__.py  base.py  pipeline.py  utils.py
tiny_blocks/etl/: __init__.py  base.py
tiny_blocks/etl/extract/: base.py  from_csv.py  from_sql_query.py  from_sql_table.py
tiny_blocks/etl/load/: base.py  to_csv.py  to_sql.py
tiny_blocks/etl/transform/: apply.py  astype.py  base.py  drop_duplicates.py  dropna.py  fillna.py  merge.py  rename.py  sort.py
tiny_blocks/examples/: __init__.py  insert_from_api.py
tiny_blocks/extract/: __init__.py  base.py  from_csv.py  from_excel.py  from_kafka.py  from_sql.py  from_sql_query.py  from_sql_table.py  from_storage.py
tiny_blocks/load/: __init__.py  base.py  to_csv.py  to_excel.py  to_kafka.py  to_sql.py  to_storage.py
tiny_blocks/sinks/: __init__.py  base.py  csv.py  sql.py
tiny_blocks/sources/: __init__.py  csv.py  sql.py
tiny_blocks/transform/: __init__.py  add_columns.py  apply.py  apply_to_row.py  astype.py  base.py  drop.py  drop_columns.py  drop_duplicates.py  drop_none.py  dropna.py  dropnone.py  enrich_api.py  fill_none.py  fillna.py  merge.py  rename.py  sort.py  validate.py
