[tool.poetry]
name = "tiny_blocks"
version = "0.1.0"
description = "Tiny Block Operations for Data Pipelines"
authors = ["Jose Vazquez <josevazjim88@gmail.com>"]

[virtualenvs]
create = true  # this creates a .venv folder
in-project = true

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
psycopg2 = "^2.9.3"
cryptography = "^37.0.4"
requests = "^2.28.1"
boto3 = "^1.24.43"
minio = "^7.1.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"
ipython = "^8.4.0"
notebook = "^6.4.12"
SQLAlchemy-Utils = "^0.38.3"
mock = "^4.0.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
