[tool.poetry]
name = "tiny_blocks"
version = "0.1.16"
description = "Tiny Block Operations for Data Pipelines"
readme = "README.md"
license = "LICENSE"
include = ["CHANGELOG.md"]
authors = ["Jose Vazquez <josevazjim88@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/pyprogrammerblog/tiny-blocks"
documentation = "https://tiny-blocks.readthedocs.io/en/latest/"

[virtualenvs]
create = true  # this creates a .venv folder
in-project = true

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.24.43"
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"
ipython = "^8.4.0"
notebook = "^6.4.12"
SQLAlchemy-Utils = "^0.38.3"
minio = "^7.1.11"
PyMySQL = "^1.0.2"
psycopg2 = "^2.9.3"
mock = "^4.0.3"
mypy = "^0.971"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
